--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
           command: apk add --no-cache bash
 
       - run:
+          timeout: 1800
           name: Build image
           command: docker build -t ataber/intel_mkl .
 
