--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
 
       - run:
           name: Build image
-          command: docker build -t ataber/intel_mkl .
+          command: docker build -t ataber/intel_mkl .:
               timeout: 1800
 
       - deploy:
